# shoshan

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: README.md  app.py  requirements.txt
docs/: DATASET_CARD.md  DATA_STATEMENT.md  MODEL_CARD.md
docs/whitepaper/: README.md  build.py  render.py
scripts/: mine_wiktionary_acronyms.py
src/shoshan/: __init__.py  cli.py  data.py  doc_text.py  edit_script.py  hub.py  infer.py  lemma_bank.py  model_joint.py  suppletive.py  text.py
src/shoshan/data/: suppletives.csv  wiktionary_acronyms.csv
