[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "shoshan"
version = "0.1.0"
description = "A zero-hallucination Hebrew lemmatizer (retrieve, then transduce)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Noam Ordan" }]
keywords = ["hebrew", "lemmatization", "nlp", "retrieval", "morphology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "numpy",
    "pandas",
    "huggingface_hub>=0.20",
]

[project.urls]
Homepage = "https://github.com/ivrit/shoshan"
Weights = "https://huggingface.co/noamor/shoshan"
Demo = "https://huggingface.co/spaces/noamor/shoshan-demo"

[project.scripts]
shoshan = "shoshan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
